--- a/src/template.html
+++ b/src/template.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Frank Grullon | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="FrankGrullon, Frank Grullon, javascript, css, html, react" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Frank Grullon | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -35,7 +35,7 @@
     </script>
 
     <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+   <!--- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
@@ -46,9 +46,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">John Doe</span>
+          Hi, my name is <span class="text-color-main">Frank Grullon</span>
           <br />
-          I'm the Unknow Developer.
+          I'm the new Web Developer in town.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -78,19 +78,18 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I'm a new web developer with experience in full-stack development.
+                Some useful skills I have include Javascript, HTML, CSS, React, Redux, SQL,
+                and more.
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                With my background in architecture and music I have learned to find 
+                creative solutions to problems. Years of project mangement experience 
+                have also given me the skills to apply successful collaboration methods to acheive
+                project delivery on time and within budget.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/FG_Resume.pdf">
                   View Resume
                 </a>
               </span>
@@ -113,29 +112,27 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Tobita's Crochet Items</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A simple e-commerce site built from the ground up using HTML, CSS, JS, and React for
+                    custom-made crochet pieces. The site includes full shopping cart functionality, a
+                    PayPal checkout system, and image gallery. It was a major upgrade to an old site built in 1999!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="http://www.tobitas-crochet.com">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FrankGrullon/tobitascrochet">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="http://www.tobitas-crochet.com" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/tobitacrochet.png" />
                   </div>
                 </a>
               </div>
@@ -147,29 +144,29 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Frank's Smart Brain</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This is a simple little application which utilizes Clarifai's 
+                    Face Recognition API for images uploaded to the application. I configured a Node.js server and used HTML, CSS, JS, and React to 
+                    build a login and counter system, saved users and their history on a PostgreSQL database, and deployed
+                    the application to Heroku.
+
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://franks-smart-brain.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FrankGrullon/smartbrainapi">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://franks-smart-brain.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/smartbrain.png" />
                   </div>
                 </a>
               </div>
@@ -181,35 +178,59 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Frank's Music Site</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Simple website for my previous music projects hosted by Moonfruit and enhanced
+                    with some HTML and CSS.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="http://www.frankgrullon.com">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="http://www.frankgrullon.com" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/franksite.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Robofriends App</h3>
+                <div>
+                  <p class="mb-4">
+                    Simple application which uses the Robohash image generator, Redux for state management,
+                    and a Node.js server to filter unique robot cards with a searchfield that constantly
+                    updates.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://frankgrullon.github.io/robofriends">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FrankGrullon/robofriends">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://frankgrullon.github.io/robofriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/robofriends.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -223,13 +244,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            Put here your contact CTA
+            I can help you with your next project!
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:frank.a.grullon@gmail.com"
+            >Message Me</a
           >
         </div>
       </div>
@@ -243,16 +264,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a href="http://facebook.com/frankgrullon" target="_blank">
+            <i class="fa fa-facebook fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/frankgrullon/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="http://github.com/FrankGrullon" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -261,7 +279,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2019 - Developed with
+          © 2020 - Developed with
           <i
             style="color: #dc3545; font-size: 1.8rem"
             class="fa fa-heart px-1"
@@ -272,26 +290,6 @@
         </p>
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
