--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
                 project delivery on time and within budget.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/FG_Resume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./FG_Resume.pdf">
                   View Resume
                 </a>
               </span>
