--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="FrankGrullon, Frank Grullon, javascript, css, html, react" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="Frank Grullon | Developer" />
+    <meta name="description" content="Frank Grullon | Developer, web developer, full-stack developer" />
 
     <!-- Required librarys -->
     <link
@@ -120,7 +120,7 @@
                     PayPal checkout system, and image gallery. It was a major upgrade to an old site built in 1999!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="http://www.tobitas-crochet.com">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://www.tobitas-crochet.com">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FrankGrullon/tobitascrochet">
@@ -130,7 +130,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="http://www.tobitas-crochet.com" target="_blank">
+                <a href="https://www.tobitas-crochet.com" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/tobitacrochet.png" />
                   </div>
