updated bio and pic sizing

--- a/src/template.html
+++ b/src/template.html
@@ -84,8 +84,8 @@
               </p>
               <p class="about-wrapper__info-text">
                 With my background in architecture and music I have learned to find 
-                creative solutions to problems. Years of project mangement experience 
-                have also given me the skills to apply successful collaboration methods to acheive
+                creative solutions to problems. Years of project management experience 
+                have also given me the skills to apply successful collaboration methods to achieve
                 project delivery on time and within budget.
               </p>
               <span class="d-flex mt-3">
