--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
                 project delivery on time and within budget.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/17VWuoa9Go6DhYj861EL5VR0D4-CessNv/view?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1W_RO0nzbORDE5VPlx1jjtBMinAmzfbe7">
                   View Resume
                 </a>
               </span>
