added site to portfolio

--- a/src/template.html
+++ b/src/template.html
@@ -140,6 +140,35 @@
           </div>
           <!-- /END Project -->
 
+            <!-- Each .row is a project -->
+            <div class="row">
+              <div class="col-lg-4 col-sm-12">
+                <div class="project-wrapper__text">
+                  <h3 class="project-wrapper__text-title">Divine Solutions</h3>
+                  <div>
+                    <p class="mb-4">
+                      This website was built using a modified WordPress theme (customized with PHP and CSS) and turned
+                      around for the client quickly, allowing the client to do modifications as necessary and integrating
+                      LiveZilla and Bravenet calendars to his already existing workflow and accounts.
+                    </p>
+                  </div>
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://divinesolutions.org">
+                    See Live
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-8 col-sm-12">
+                <div class="project-wrapper__image">
+                  <a href="https://divinesolutions.org" target="_blank">
+                    <div data-tilt class="thumbnail rounded">
+                      <img class="img-fluid" src="./assets/divinesolutions.png" />
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- /END Project -->
+
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
