Added site to portfolio

--- a/src/template.html
+++ b/src/template.html
@@ -169,6 +169,39 @@
             </div>
             <!-- /END Project -->
 
+            <!-- Each .row is a project -->
+            <div class="row">
+              <div class="col-lg-4 col-sm-12">
+                <div class="project-wrapper__text">
+                  <h3 class="project-wrapper__text-title">Office of Small Projects</h3>
+                  <div>
+                    <p class="mb-4">
+                      OSP (Office of Small Projects) was first prototyped on Adobe XD with the business owner providing
+                      feedback and comments via the XD system. It was then coded into a customized WordPress template using
+                      HTML, CSS, Javascript, and PHP. I then used Elementor as a CMS to educate the client how to update
+                      and modify the site to his liking and to accomodate future changes.
+                    </p>
+                  </div>
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://osp-nashville.com">
+                    See Live
+                  </a>
+                  <a target="_blank" class="cta-btn text-color-main" href="https://xd.adobe.com/view/c0bb91da-821a-40f2-7a5f-3f781391afbe-b68a/?fullscreen">
+                    Prototype
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-8 col-sm-12">
+                <div class="project-wrapper__image">
+                  <a href="https://osp-nashville.com" target="_blank">
+                    <div data-tilt class="thumbnail rounded">
+                      <img class="img-fluid" src="./assets/ospimg.png" />
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- /END Project -->
+            
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
