--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
                 project delivery on time and within budget.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1W_RO0nzbORDE5VPlx1jjtBMinAmzfbe7">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=14dbn3wG7CEkz097qDdjYFUxbrwO-LI6n">
                   View Resume
                 </a>
               </span>
@@ -341,14 +341,8 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Developed with
-          <i
-            style="color: #dc3545; font-size: 1.8rem"
-            class="fa fa-heart px-1"
-          ></i>
-          <a href="https://github.com/covidev" target="_blank"
-            >Jacobo Martínez
-          </a>
+          © 2020 - Frank Grullon
+         
         </p>
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
