--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> cobimr@protonmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>Frank Grullon | Developer</title>
+    <title>Frank Grullon | Software Engineer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="FrankGrullon, Frank Grullon, javascript, css, html, react" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -29,23 +18,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script>
-      ScrollReveal({ reset: false });
-    </script>
+    <link rel="stylesheet" href="styles.scss" />
+    <script
+      defer
+      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
+    ></script>
 
     <!-- Remove this script once you setup your custom portfolio -->
    <!--- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
   </head>
-
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
+  
   <body>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
     <div id="hero" class="jumbotron">
       <div class="container">
-        <h1 class="hero-title" class="load-hidden">
+        <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Frank Grullon</span>
           <br />
           I'm the new Software Engineer in town.
@@ -89,7 +78,7 @@
 		project management experience with a passion to find creative solutions to any project I work on.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=14dbn3wG7CEkz097qDdjYFUxbrwO-LI6n">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/FG_Resume.pdf">
                   View Resume
                 </a>
               </span>
@@ -256,5 +245,6 @@
       </div>
     </footer>
     <!-- /END Footer Section -->
+    <script defer type="module" src="index.js"></script>
   </body>
 </html>
